objects/Ticket_Session_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Is_Input__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Input</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <label>Session</label>
        <referenceTo>MatchLeads_Days__c</referenceTo>
        <relationshipLabel>Ticket_Session_Mapping</relationshipLabel>
        <relationshipName>Ticket_Session_Mapping</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ticket__c</fullName>
        <label>Ticket</label>
        <referenceTo>TicketTypes__c</referenceTo>
        <relationshipLabel>Ticket_Session_Mapping</relationshipLabel>
        <relationshipName>Ticket_Session_Mapping</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unique_Ids__c</fullName>
        <externalId>true</externalId>
        <label>Unique Ids</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Ticket_Session_Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Ticket_Session_Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ticket_Session_Mapping</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>